--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     connect-src 'self' http://localhost:6969 https://*.googleapis.com https://*.firebaseio.com https://securetoken.googleapis.com;
     font-src 'self' https://fonts.gstatic.com data:;
+    media-src 'self' blob:;
+    frame-src 'self' https://www.youtube.com;
     "
     />
   </head>
