--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Kora</title>
     <meta
       http-equiv="Content-Security-Policy"
       content="
     default-src 'self';
     img-src 'self' data: https:;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-    connect-src 'self' http://localhost:6969 https://*.googleapis.com https://*.firebaseio.com https://securetoken.googleapis.com;
+    connect-src 'self' http://localhost:6969 http://192.168.1.232:6969 https://*.googleapis.com https://*.firebaseio.com https://securetoken.googleapis.com;
     font-src 'self' https://fonts.gstatic.com data:;
     media-src 'self' blob:;
     frame-src 'self' https://www.youtube.com;
