pretty solid foundation

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       http-equiv="Content-Security-Policy"
       content="
     default-src 'self';
-    img-src 'self' data: https:;
+    img-src 'self' data: https: http://localhost:6969;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     connect-src 'self' http://localhost:6969 http://192.168.1.232:6969 https://*.googleapis.com https://*.firebaseio.com https://securetoken.googleapis.com;
     font-src 'self' https://fonts.gstatic.com data:;
